Austes in the connection with the database and creation of viewModels

--- a/Config/settings.json
+++ b/Config/settings.json
@@ -2,9 +2,9 @@
 
     "database": {
         "hostname": "127.0.0.1",
-        "dbname": "database_name",
-        "username": "user_name",
-        "password": "password",
+        "dbname": "gestor_financeiro_homol",
+        "username": "root",
+        "password": "",
         "port": 3306
     }
 }
